--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^1.3.0
   http: ^0.13.4
+  path_provider: ^2.0.11
+  cloud_firestore: ^3.1.17
+  firebase_storage: ^10.2.17
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
 
 dev_dependencies:
   flutter_test:
